--- a/test/benchmarks-lbe/config/summaryCPA.properties
+++ b/test/benchmarks-lbe/config/summaryCPA.properties
@@ -62,15 +62,15 @@ analysis.bfs = false
 #analysis.programs = /localhome/erkan/cpa/tests/Test
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.location.LocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep
+analysis.mergeOperators = sep, sep, sep
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep
+analysis.stopOperators = sep, sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = true
